; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_PicoRead8_sprot.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_PicoRead8_sprot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_UIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"prot r8  [%06x]   %02x @%06x\00", align 1
@SekPc = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"prot r8  [%06x] MISS @%06x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @PicoRead8_sprot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PicoRead8_sprot(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp sle i32 10551296, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 10559488
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @PicoRead8_io(i32 %12)
  store i32 %13, i32* %2, align 4
  br label %40

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %3, align 4
  %16 = call i32* @carthw_sprot_get_val(i32 %15, i32 0)
  store i32* %16, i32** %4, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %35

19:                                               ; preds = %14
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %3, align 4
  %23 = and i32 %22, 1
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %19
  %26 = load i32, i32* %5, align 4
  %27 = ashr i32 %26, 8
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %25, %19
  %29 = load i32, i32* @EL_UIO, align 4
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* @SekPc, align 4
  %33 = call i32 (i32, i8*, i32, i32, ...) @elprintf(i32 %29, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %30, i32 %31, i32 %32)
  %34 = load i32, i32* %5, align 4
  store i32 %34, i32* %2, align 4
  br label %40

35:                                               ; preds = %14
  %36 = load i32, i32* @EL_UIO, align 4
  %37 = load i32, i32* %3, align 4
  %38 = load i32, i32* @SekPc, align 4
  %39 = call i32 (i32, i8*, i32, i32, ...) @elprintf(i32 %36, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %37, i32 %38)
  store i32 0, i32* %2, align 4
  br label %40

40:                                               ; preds = %35, %28, %11
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @PicoRead8_io(i32) #1

declare dso_local i32* @carthw_sprot_get_val(i32, i32) #1

declare dso_local i32 @elprintf(i32, i8*, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
